--- a/build.gradle
+++ b/build.gradle
@@ -95,7 +95,7 @@ jar{
         configurations.runtimeClasspath.collect{ it.isDirectory() ? it : zipTree(it) }
     }
     from(rootDir){
-        include "mod.json"
+        include "mod.hjson"
     }
     from("assets/"){
         include "**"
