--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -16,7 +16,7 @@ jobs:
       with:
         java-version: 17
     - name: Build mod jar
-      run: ./gradlew dex
+      run: ./gradlew clean dex
     - name: Upload built jar file
       uses: actions/upload-artifact@v2
       with:
