bundles, stats, and planet changes

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,2 +1,28 @@
+## abilities
+ability.hailshield = Hail Shield
+ability.javelin = Javelin
+
+## categories
+category.omaloon-pressure = Pressure
+
 fragment.omaloon.shaped-env-placer = Shaped Env Placer
 place = Place
+
+## settings
+mod.ol.omaloon-settings = Omaloon
+setting.omaloon.check-updates = Check Updates
+settign.omaloon.shield-opacity = Shield Opacity
+settign.omaloon.show-disclaimer = Show Disclaimer
+
+## stats
+stat.omaloon-consumepressure = Consume Pressure
+stat.omaloon-maxpressure = Max Pressure
+stat.omaloon-minpressure = Min Pressure
+stat.omaloon-max-speed = Max Speed
+stat.omaloon-min-speed = Min Speed
+stat.omaloon-outputpressure = Output Pressure
+stat.omaloon-pressureflow = Pressure Flow
+
+## units
+unit.omaloon-pressuresecond = Pressure Units / Second
+unit.omaloon-pressureunits = Pressure Units
