--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -7,6 +7,7 @@ category.omaloon-pressure = Pressure
 
 fragment.omaloon.shaped-env-placer = Shaped Env Placer
 place = Place
+ui.omaloon-process-cliffs = Process Cliffs
 
 ## settings
 mod.ol.omaloon-settings = Omaloon
