cliff data fix(could break save) and add pressure range stat

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -23,6 +23,8 @@ stat.omaloon-max-speed = Max Speed
 stat.omaloon-min-speed = Min Speed
 stat.omaloon-outputpressure = Output Pressure
 stat.omaloon-pressureflow = Pressure Flow
+stat.omaloon-pressurerange = Operating Range
+stat.omaloon-pressurerange.format = From @ Pressure Units to @ Pressure Units.
 
 ## units
 unit.omaloon-pressuresecond = Pressure Units / Second
