--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -9,6 +9,17 @@ fragment.omaloon.shaped-env-placer = Shaped Env Placer
 place = Place
 ui.omaloon-process-cliffs = Process Cliffs
 
+## sectors
+sector.omaloon-crater-map.text1 = [#bbc7c9]Cobalt[] is an essential resource for most buildings. \n grab a few to set up automatic [#bbc7c9]Cobalt[] mining here.
+sector.omaloon-crater-map.text2 = Now that there is enough Cobalt, [accent]Hammer Drills[] can be built. \nThese require negative pressure to function.
+sector.omaloon-crater-map.text3 = The pressure inside the drill needs to\n  be pumped out using a [accent]Pressure pump[]. \n Place one facing away                           \nfrom a nearby [accent]Hammer Drill[].                 
+sector.omaloon-crater-map.text4 = More complex machinery requires [#92DD7E]Beryllium[].\nWhich can be found around the crater.
+sector.omaloon-crater-map.text5 = Hail often falls on this place, which can lead to damage to the factory.\nBuild [accent]Shelters[] and supply them with power and positive pressure.
+sector.omaloon-crater-map.text6 = This hailstorm will last just enough to make some [#9983B8]Carborundum[].\n it is made using a [accent]Carborundum Press[], which uses Beryllium,\nCobalt and positive pressure as input.
+sector.omaloon-crater-map.text7 = With your current resources, upgrade your core to a [accent]Core Floe[]\nto be able to gather enough resources to launch to other sectors.
+
+objective.hail-warning = Massive hail storm approaching in [lightgray]{0}[]
+
 ## settings
 mod.ol.omaloon-settings = Omaloon
 setting.omaloon.check-updates = Check Updates
