cliff change part 2

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -8,6 +8,7 @@ category.omaloon-pressure = Pressure
 fragment.omaloon.shaped-env-placer = Shaped Env Placer
 place = Place
 ui.omaloon-process-cliffs = Process Cliffs
+ui.omaloon-un-process-cliffs = Reset Cliffs
 
 ## sectors
 sector.omaloon-crater-map.text1 = [#bbc7c9]Cobalt[] is an essential resource for most buildings. \n grab a few to set up automatic [#bbc7c9]Cobalt[] mining here.
