--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -5,10 +5,10 @@ ability.javelin = Javelin
 ## categories
 category.omaloon-pressure = Pressure
 
-fragment.omaloon.shaped-env-placer = Shaped Env Placer
-place = Place
-ui.omaloon-process-cliffs = Process Cliffs
-ui.omaloon-un-process-cliffs = Reset Cliffs
+## Hints
+hint.omaloon-drill = Drills work faster the less pressure that they have. But they stop working right before te lack of pressure damages them.
+hint.omaloon-pump = Pumps only stop when the front is solid.
+hint.omaloon-valve = The valve can maintain the pressure for 3 pumps.
 
 ## sectors
 sector.omaloon-crater-map.text1 = [#bbc7c9]Cobalt[] is an essential resource for most buildings. \n grab a few to set up automatic [#bbc7c9]Cobalt[] mining here.
@@ -37,6 +37,12 @@ stat.omaloon-outputpressure = Output Pressure
 stat.omaloon-pressureflow = Pressure Flow
 stat.omaloon-pressurerange = Operating Range
 stat.omaloon-pressurerange.format = From @ Pressure Units to @ Pressure Units.
+
+## ui
+fragment.omaloon.shaped-env-placer = Shaped Env Placer
+place = Place
+ui.omaloon-process-cliffs = Process Cliffs
+ui.omaloon-un-process-cliffs = Reset Cliffs
 
 ## units
 unit.omaloon-pressuresecond = Pressure Units / Second
