unit names are so big that they funky the wave ui

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -44,6 +44,22 @@ place = Place
 ui.omaloon-process-cliffs = Process Cliffs
 ui.omaloon-un-process-cliffs = Reset Cliffs
 
-## units
+## ui units
 unit.omaloon-pressuresecond = Pressure Units / Second
 unit.omaloon-pressureunits = Pressure Units
+
+## units
+unit.omaloon-legionnaire.name = Leggionaire
+unit.omaloon-leggionaire.description = A small unit capable of shooting small bullets.
+unit.omaloon-centurion.name = Centurion
+unit.omaloon-centurion.description = A bulkier version of a Legionnaire. Shoots fragmented bullets.
+unit.omaloon-praetorian.name = Praetorian
+unit.omaloon-praetorian.description = A big unit that launches frag ballistic missiles to the sky.
+
+unit.omaloon-cilantro.name = Cilantro
+unit.omaloon-cilantro.description = A small flying unit capable of charging small energy bullets.
+unit.omaloon-basil.name = Basil
+unit.omaloon-basil.description = A flying laser turret
+unit.omaloon-sage.name = Sage
+unit.omaloon-sage.description = A heavy unit with 4 bullet mounts.
+
