--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -63,3 +63,6 @@ unit.omaloon-basil.description = A flying laser turret
 unit.omaloon-sage.name = Sage
 unit.omaloon-sage.description = A heavy unit with 4 bullet mounts.
 
+unit.omaloon-lumen.name = Lumen
+unit.omaloon-lumen.description = A mobile pressurized can of fluids, that destroys itself when releasing the fluid.
+
