--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -40,6 +40,7 @@ stat.omaloon-pressurerange.format = From @ Pressure Units to @ Pressure Units.
 
 ## ui
 fragment.omaloon.shaped-env-placer = Shaped Env Placer
+fragment.omaloon.cliff-placer = Cliff Placer
 place = Place
 ui.omaloon-process-cliffs = Process Cliffs
 ui.omaloon-un-process-cliffs = Reset Cliffs
