--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -22,10 +22,11 @@ sector.omaloon-crater-map.text7 = With your current resources, upgrade your core
 objective.hail-warning = Massive hail storm approaching in [lightgray]{0}[]
 
 ## settings
-mod.ol.omaloon-settings = Omaloon
-setting.omaloon.check-updates = Check Updates
-settign.omaloon.shield-opacity = Shield Opacity
-settign.omaloon.show-disclaimer = Show Disclaimer
+settings.omaloon = Omaloon
+setting.omaloon-check-updates = Check Updates
+setting.omaloon-shield-opacity = Shield Opacity
+setting.omaloon-show-disclaimer = Show Disclaimer
+setting.omaloon-discord-join = Join the discord server :3
 
 ## stats
 stat.omaloon-consumepressure = Consume Pressure
