--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -6,18 +6,18 @@ ability.javelin = Javelin
 category.omaloon-pressure = Pressure
 
 ## Hints
-hint.omaloon-drill = Drills work faster the less pressure that they have. But they stop working right before te lack of pressure damages them.
-hint.omaloon-pump = Pumps only stop when the front is solid.
+hint.omaloon-drill = Drills work faster the less pressure that they have. But be careful to not implode them.
+hint.omaloon-pump = Pumps only stop when the front is solid. or the front has enough pressure.
 hint.omaloon-valve = The valve can maintain the pressure for 3 pumps.
 
 ## sectors
-sector.omaloon-crater-map.text1 = [#bbc7c9]Cobalt[] is an essential resource for most buildings. \n grab a few to set up automatic [#bbc7c9]Cobalt[] mining here.
-sector.omaloon-crater-map.text2 = Now that there is enough Cobalt, [accent]Hammer Drills[] can be built. \nThese require negative pressure to function.
-sector.omaloon-crater-map.text3 = The pressure inside the drill needs to\n  be pumped out using a [accent]Pressure pump[]. \n Place one facing away                           \nfrom a nearby [accent]Hammer Drill[].                 
-sector.omaloon-crater-map.text4 = More complex machinery requires [#92DD7E]Beryllium[].\nWhich can be found around the crater.
-sector.omaloon-crater-map.text5 = Hail often falls on this place, which can lead to damage to the factory.\nBuild [accent]Shelters[] and supply them with power and positive pressure.
-sector.omaloon-crater-map.text6 = This hailstorm will last just enough to make some [#9983B8]Carborundum[].\n it is made using a [accent]Carborundum Press[], which uses Beryllium,\nCobalt and positive pressure as input.
-sector.omaloon-crater-map.text7 = With your current resources, upgrade your core to a [accent]Core Floe[]\nto be able to gather enough resources to launch to other sectors.
+sector.omaloon-crater-map.text1 = [#bbc7c9]Cobalt[] is an essential resource for most buildings. grab a few to set up automatic [#bbc7c9]Cobalt[] mining here.
+sector.omaloon-crater-map.text2 = Now that there is enough Cobalt, [accent]Hammer Drills[] can be built. These require negative pressure to function.
+sector.omaloon-crater-map.text3 = The pressure inside the drill needs to be pumped out using a [accent]Pressure pump[]. Place one facing away from a nearby [accent]Hammer Drill[].
+sector.omaloon-crater-map.text4 = More complex machinery requires [#92DD7E]Beryllium[]. Which can be found around the crater.
+sector.omaloon-crater-map.text5 = Hail often falls on this place, which can lead to damage to the factory. Build [accent]Shelters[].
+sector.omaloon-crater-map.text6 = This hailstorm will last just enough to make some [#9983B8]Carborundum[]. it is made using a [accent]Carborundum Press[], which uses Beryllium and Cobalt in a pressurized environment.
+sector.omaloon-crater-map.text7 = With your current resources, upgrade your core to a [accent]Core Floe[] to be able to gather enough resources to launch to other sectors.
 
 objective.hail-warning = Massive hail storm approaching in [lightgray]{0}[]
 
