bundles, but no description

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -6,10 +6,126 @@ ability.javelin = Javelin
 binding.category-omaloon-editor = Editor
 category.omaloon-pressure = Pressure
 
+## crafting
+block.omaloon-carborundum-press.name = Carborundum Press
+
+## defense
+block.omaloon-repairer.name = Repairer
+block.omaloon-small-shelter.name = Small Shelter
+
+block.omaloon-apex.name = Apex
+block.omaloon-blast.name = Blast
+block.omaloon-convergence.name = Convergence
+block.omaloon-javelin.name = Javelin
+
+block.omaloon-carborundum-wall.name = Carborundum Wall
+block.omaloon-carborundum-wall-large.name = Large Carborundum Wall
+
+## distribution
+block.omaloon-tube-bridge-conveyor.name = Tube Bridge
+block.omaloon-tube-conveyor.name = Tube Conveyor
+block.omaloon-tube-distributor.name = Tube Distributor
+block.omaloon-tube-gate.name = Tube Gate
+block.omaloon-tube-junction.name = Tube Junction
+block.omaloon-tube-sorter.name = Tube Sorter
+
+block.omaloon-liquid-bridge.name = Liquid Bridge
+block.omaloon-liquid-junction.name = Liquid Junction
+block.omaloon-liquid-pump.name = Liquid Pump
+block.omaloon-liquid-tube.name = Liquid Tube
+block.omaloon-liquid-valve.name = Liquid Valve
+
+## environment
+block.omaloon-cliff-up.name = Hill
+block.omaloon-cliff-helper.name = Cliff Helper
+
+block.omaloon-deep-glacium.name = Deep Glacium
+block.omaloon-grenite-glacium.name = Grenite Glacium
+block.omaloon-shallow-glacium.name = Shallow Glacium
+
+block.omaloon-dead-grass.name = Dead Grass
+block.omaloon-dead-shrub.name = Dead Shrub
+block.omaloon-dead-thickets.name = Dead Thickets
+
+block.omaloon-frozen-soil.name = Frozen Soil
+block.omaloon-frozen-soil-boulder.name = Frozen Soil Boulder
+block.omaloon-frozen-soil-wall.name = Frozen Soil Wall
+
+block.omaloon-albaster.name = Albaster
+block.omaloon-albaster-boulder.name = Albaster Boulder
+block.omaloon-albaster-tiles.name = Albaster Tiles
+block.omaloon-albaster-craters.name = Albaster Crater
+block.omaloon-albaster-wall.name = Albaster Wall
+
+block.omaloon-aghanite-dust.name = Aghanite Dust
+block.omaloon-aghanite-shale.name = Aghanite Shale
+block.omaloon-aghatite.name = Aghanite
+block.omaloon-aghatiteBoulder.name = Aghanite Boulder
+block.omaloon-aghatite-pebbles.name = Aghanite Pebbles
+block.omaloon-aghanite-wall.name = Aghanite Wall
+block.omaloon-berylled-aghanite.name = Berylled Aghanite
+block.omaloon-berylled-aghanite-boulder.name = Berylled Aghanite Boulder
+block.omaloon-coastal-aghanite.name = Coastal Aghanite
+block.omaloon-cobalted-aghanite.name = Cobalted Aghanite
+block.omaloon-cobalted-aghanite-stones.name = Cobalted Aghanite Stones
+block.omaloon-cobalted-aghanite-wall.name = Cobalted Aghanite Wall
+block.omaloon-cracked-aghanite.name = Cracked Aghanite
+block.omaloon-weathered-aghanite.name = Weathered Aghanite
+block.omaloon-weathered-aghanite-boulder.name = Weathered Aghanite Boulder
+block.omaloon-weathered-aghanite-wall.name = Weathered Aghanite Wall
+
+block.omaloon-quartz-sand.name = Quartz Sand
+block.omaloon-quartz-sand-boulder.name = Quartz Sand Boulder
+block.omaloon-quartz-sand-wall.name = Quartz Sand Wall
+
+block.omaloon-dark-grenite-wall.name = Dark Grenite Wall
+block.omaloon-coastal-grenite.name = Coastal Grenite
+block.omaloon-grenite.name = Grenite
+block.omaloon-grenite-boulder.name = Grenite Boulder
+block.omaloon-grenite-wall.name = Grenite
+
+block.omaloon-blue-boulder.name = Blue Boulder
+block.omaloon-blue-ice.name = Blue Ice
+block.omaloon-blue-ice-pieces.name = Blue Ice Pieces
+block.omaloon-blue-ice-wall.name = Blue Ice Wall
+block.omaloon-blue-snow.name = Blue Snow
+block.omaloon-blue-snow-wall.name = Blue Snow Wall
+block.omaloon-blue-snowdrifts.name = Blue Snowdrifts
+block.omaloon-weathered-ice.name = Weathered Ice
+
+block.omaloon-fallen-dead-tree.name = Fallen Dead Tree
+block.omaloon-fallen-dead-tree-bottom-half.name = Fallen Dead Tree Bottom Half
+block.omaloon-fallen-dead-tree-top-half.name = Fallen Dead Tree Top Half
+block.omaloon-standing-dead-tree.name = Standing Dead Tree
+block.omaloon-dead-tree-stump.name = Dead Stump
+
 ## Hints
 hint.omaloon-drill = Drills work faster the less pressure that they have. But be careful to not implode them.
 hint.omaloon-pump = Pumps only stop when the front is solid. or the front has enough pressure.
 hint.omaloon-valve = The valve can maintain the pressure for 3 pumps.
+
+## items
+item.omaloon-carborundum.name = Carborundum
+item.omaloon-cobalt.name = Cobalt
+
+## liquids
+liquid.omaloon-glacium.name = Glacium
+liquid.omaloon-tired-glacium.name = Tired Glacium
+
+## planets
+planet.omaloon-omaloon = Omaloon
+planet.omaloon-glasmore = Glasmore
+
+## power
+block.omaloon-coal-generator.name = Coal Generator
+block.omaloon-impulse-node.name = Impulse Node
+block.omaloon-wind-turbine.name = Wind Turbine
+
+## production
+block.omaloon-hammer-drill.name = Hammer drill
+
+## sandbox
+block.omaloon-pressure-source.name = Pressure Source
 
 ## sectors
 sector.omaloon-crater-map.text1 = [#bbc7c9]Cobalt[] is an essential resource for most buildings. grab a few to set up automatic [#bbc7c9]Cobalt[] mining here.
@@ -40,6 +156,14 @@ stat.omaloon-pressureflow = Pressure Flow
 stat.omaloon-pressurerange = Operating Range
 stat.omaloon-pressurerange.format = From @ Pressure Units to @ Pressure Units.
 
+## status
+status.omaloon-glacied.name = Glacied
+status.omaloon-wind-breeze.name = Breeze
+
+## storage
+block.omaloon-core-floe.name = Core Floe
+block.omaloon-landing-capsule.name = Landing Capsule
+
 ## ui
 fragment.omaloon.shaped-env-placer = Shaped Env Placer
 fragment.omaloon.cliff-placer = Cliff Placer
@@ -52,6 +176,11 @@ unit.omaloon-pressuresecond = Pressure Units / Second
 unit.omaloon-pressureunits = Pressure Units
 
 ## units
+unit.omaloon-effort.name = Effort
+
+unit.omaloon-discovery.name = Discovery
+unit.omaloon-walker.name = Walker
+
 unit.omaloon-legionnaire.name = Leggionaire
 unit.omaloon-leggionaire.description = A small unit capable of shooting small bullets.
 unit.omaloon-centurion.name = Centurion
@@ -69,3 +198,7 @@ unit.omaloon-sage.description = A heavy unit with 4 bullet mounts.
 unit.omaloon-lumen.name = Lumen
 unit.omaloon-lumen.description = A mobile pressurized can of fluids, that destroys itself when releasing the fluid.
 
+## weather
+weather.omaloon-hail-storm.name = Hail Storm
+weather.omaloon-aghanite-storm.name = Aghanite Storm
+weather.omaloon-wind.name = Wind
