campaign should be playable now

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -8,32 +8,52 @@ category.omaloon-pressure = Pressure
 
 ## crafting
 block.omaloon-carborundum-press.name = Carborundum Press
+block.omaloon-carborundum-press.description = A pressurized machine that produces carborundum.
 
 ## defense
 block.omaloon-repairer.name = Repairer
+block.omaloon-repairer.description = A repair projector that heals a small amount of both units and buildings.
 block.omaloon-small-shelter.name = Small Shelter
+block.omaloon-small-shelter.description = A shield against hazardous weather.
 
 block.omaloon-apex.name = Apex
+block.omaloon-apex.description = A small gun.
 block.omaloon-blast.name = Blast
+block.omaloon-blast.description = An AoE weapon that stuns enemies.
 block.omaloon-convergence.name = Convergence
+block.omaloon-convergence.description = A small anti air turret.
 block.omaloon-javelin.name = Javelin
+block.omaloon-javelin.description = A long range cruise missile launcher.
 
 block.omaloon-carborundum-wall.name = Carborundum Wall
+block.omaloon-carborundum-wall.description = A wall made out of Carborundum.
 block.omaloon-carborundum-wall-large.name = Large Carborundum Wall
+block.omaloon-carborundum-wall-large.description = A large wall made out of Carborundum.
 
 ## distribution
 block.omaloon-tube-bridge-conveyor.name = Tube Bridge
+block.omaloon-tube-bridge-conveyor.description = A tube convetor that can go through terrain.
 block.omaloon-tube-conveyor.name = Tube Conveyor
+block.omaloon-tube-conveyor.description = A conveyor within a tube to avoid weather.
 block.omaloon-tube-distributor.name = Tube Distributor
+block.omaloon-tube-distributor.description = An automatic distributor.
 block.omaloon-tube-gate.name = Tube Gate
+block.omaloon-tube-gate.description = A gate that can change from overflow mode to underfow mode.
 block.omaloon-tube-junction.name = Tube Junction
+block.omaloon-tube-junction.description = A standard junction.
 block.omaloon-tube-sorter.name = Tube Sorter
+block.omaloon-tube-sorter.description = A sorter that can filter in multiple items.
 
 block.omaloon-liquid-bridge.name = Liquid Bridge
+block.omaloon-liquid-bridge.description = A liquid tube that can go through terrain. Multi directional.
 block.omaloon-liquid-junction.name = Liquid Junction
+block.omaloon-liquid-junction.description = A standard liquid junction.
 block.omaloon-liquid-pump.name = Liquid Pump
+block.omaloon-liquid-pump.description = A pump that can pump fluids in/out.
 block.omaloon-liquid-tube.name = Liquid Tube
+block.omaloon-liquid-tube.description = A liquid tube that can be pressurized. Multi directional.
 block.omaloon-liquid-valve.name = Liquid Valve
+block.omaloon-liquid-valve.description = A valve that will open if pressure gets low. Jams if the pressure is way too low.
 
 ## environment
 block.omaloon-cliff-up.name = Hill
@@ -106,26 +126,36 @@ hint.omaloon-valve = The valve can maintain the pressure for 3 pumps.
 
 ## items
 item.omaloon-carborundum.name = Carborundum
+item.omaloon-carborundum.description = A dense alloy used in advanced buildings, and belic industries.
 item.omaloon-cobalt.name = Cobalt
+item.omaloon-cobalt.description = A common resource, userful for transportation and basic production.
 
 ## liquids
 liquid.omaloon-glacium.name = Glacium
 liquid.omaloon-tired-glacium.name = Tired Glacium
 
+## objectives
+requirement.omaloon-at-wave = Reach Wave {0} in {1}
+
 ## planets
-planet.omaloon-omaloon = Omaloon
-planet.omaloon-glasmore = Glasmore
+planet.omaloon-omaloon.name = Omaloon
+planet.omaloon-glasmore.name = Glasmore
 
 ## power
 block.omaloon-coal-generator.name = Coal Generator
+block.omaloon-coal-generator.description = A regular coal generator.
 block.omaloon-impulse-node.name = Impulse Node
+block.omaloon-impulse-node.description = A node that transfers power in arcs.
 block.omaloon-wind-turbine.name = Wind Turbine
+block.omaloon-wind-turbine.description = A regular wind turbine.
 
 ## production
 block.omaloon-hammer-drill.name = Hammer drill
+block.omaloon-hammer-drill.description = A drill that uses a vaccum to strike the ground.
 
 ## sandbox
 block.omaloon-pressure-source.name = Pressure Source
+block.omaloon-pressure-source.description = A source for both fluids and pressure.
 
 ## sectors
 sector.omaloon-crater-map.text1 = [#bbc7c9]Cobalt[] is an essential resource for most buildings. grab a few to set up automatic [#bbc7c9]Cobalt[] mining here.
@@ -137,6 +167,14 @@ sector.omaloon-crater-map.text6 = This hailstorm will last just enough to make s
 sector.omaloon-crater-map.text7 = With your current resources, upgrade your core to a [accent]Core Floe[] to be able to gather enough resources to launch to other sectors.
 
 objective.hail-warning = Massive hail storm approaching in [lightgray]{0}[]
+
+## Sector
+sector.omaloon-The_Crater.name = The Crater
+sector.omaloon-The_Crater.description = A small crater hidden from the enemy by it's rough terrain and bad weather. A perfect place for a ground zero.
+sector.omaloon-Redeployment_Path.name = Redeployment Path
+sector.omaloon-Redeployment_Path.description = A aghanite desert with signs of heavy erosion. There is uneven terrain exposed due to this place's long aghanite storms. The enemy is present here, using small mechs and Lumens.
+sector.omaloon-Frozen_Valley.name = Frozen Valley
+sector.omaloon-Frozen_Valley.description = A peaceful valley containing a dead forest, this place is devoid of hail. Due to the high altitude, the enemy mainly uses flying units.
 
 ## settings
 settings.omaloon = Omaloon
@@ -160,8 +198,14 @@ stat.omaloon-pressurerange.format = From @ Pressure Units to @ Pressure Units.
 status.omaloon-glacied.name = Glacied
 status.omaloon-wind-breeze.name = Breeze
 
+status.omaloon-filled-with-glacium.name = Filled with Glacium
+status.omaloon-filled-with-oil.name = Filled with Oil
+status.omaloon-filled-with-slag.name = Filled with Slag
+status.omaloon-filled-with-water.name = Filled with Water
+
 ## storage
 block.omaloon-core-floe.name = Core Floe
+block.omaloon-core-floe.description = A larger core. Capable of holding the amount necessary to launch to other sectors.
 block.omaloon-landing-capsule.name = Landing Capsule
 
 ## ui
@@ -177,9 +221,12 @@ unit.omaloon-pressureunits = Pressure Units
 
 ## units
 unit.omaloon-effort.name = Effort
+unit.omaloon-effort.description = A flying insect like unit. Damages buildings it passes through like a javelin.
 
 unit.omaloon-discovery.name = Discovery
+unit.omaloon-discovery.description = A small unit. Core unit of the Landing capsule.
 unit.omaloon-walker.name = Walker
+unit.omaloon-walker.description = The core unit of the Core Floe. Has a support and attack drone.
 
 unit.omaloon-legionnaire.name = Leggionaire
 unit.omaloon-leggionaire.description = A small unit capable of shooting small bullets.
