why didn't this go aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -229,7 +229,7 @@ unit.omaloon-walker.name = Walker
 unit.omaloon-walker.description = The core unit of the Core Floe. Has a support and attack drone.
 
 unit.omaloon-legionnaire.name = Leggionaire
-unit.omaloon-leggionaire.description = A small unit capable of shooting small bullets.
+unit.omaloon-legionnaire.description = A small unit capable of shooting small bullets.
 unit.omaloon-centurion.name = Centurion
 unit.omaloon-centurion.description = A bulkier version of a Legionnaire. Shoots fragmented bullets.
 unit.omaloon-praetorian.name = Praetorian
