slight bundle changes

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -158,13 +158,33 @@ block.omaloon-pressure-source.name = Pressure Source
 block.omaloon-pressure-source.description = A source for both fluids and pressure.
 
 ## sectors
-sector.omaloon-crater-map.text1 = [#bbc7c9]Cobalt[] is an essential resource for most buildings. grab a few to set up automatic [#bbc7c9]Cobalt[] mining here.
-sector.omaloon-crater-map.text2 = Now that there is enough Cobalt, [accent]Hammer Drills[] can be built. These require negative pressure to function.
-sector.omaloon-crater-map.text3 = The pressure inside the drill needs to be pumped out using a [accent]Pressure pump[]. Place one facing away from a nearby [accent]Hammer Drill[].
-sector.omaloon-crater-map.text4 = More complex machinery requires [#92DD7E]Beryllium[]. Which can be found around the crater.
-sector.omaloon-crater-map.text5 = Hail often falls on this place, which can lead to damage to the factory. Build [accent]Shelters[].
-sector.omaloon-crater-map.text6 = This hailstorm will last just enough to make some [#9983B8]Carborundum[]. it is made using a [accent]Carborundum Press[], which uses Beryllium and Cobalt in a pressurized environment.
-sector.omaloon-crater-map.text7 = With your current resources, upgrade your core to a [accent]Core Floe[] to be able to gather enough resources to launch to other sectors.
+sector.omaloon-crater-map.text1 = \
+  [#bbc7c9]Cobalt[] is an essential resource for most\
+  \nbuildings. grab a few to set up automatic\
+  \n[#bbc7c9]Cobalt[] mining.
+sector.omaloon-crater-map.text2 = \
+  Now that there is enough Cobalt, [accent]Hammer\
+  \nDrills[] can be built. These require negative\
+  \npressure to function.
+sector.omaloon-crater-map.text3 = \
+  The pressure inside the drill needs to be\
+  \npumped out using a [accent]Pressure pump[]. Place\
+  \none facing away from a nearby [accent]Hammer Drill[].
+sector.omaloon-crater-map.text4 = \
+  More complex machinery requires [#92DD7E]Beryllium[].\
+  \nWhich can be found around the crater.
+sector.omaloon-crater-map.text5 = \
+  Hail often falls on this place, which can\
+  \nlead to damage to the factory. Build [accent]Shelters[].
+sector.omaloon-crater-map.text6 = \
+  This hailstorm will last just enough to\
+  \nmake some [#9983B8]Carborundum[]. it is made using a [accent]Carborundum\
+  \nPress[], which uses Beryllium and Cobalt in\
+  \na pressurized environment.
+sector.omaloon-crater-map.text7 = \
+  With your current resources, upgrade your\
+  \ncore to a [accent]Core Floe[] to be able to gather\
+  \nenough resources to launch to other sectors.
 
 objective.hail-warning = Massive hail storm approaching in [lightgray]{0}[]
 
@@ -207,6 +227,9 @@ status.omaloon-filled-with-water.name = Filled with Water
 block.omaloon-core-floe.name = Core Floe
 block.omaloon-core-floe.description = A larger core. Capable of holding the amount necessary to launch to other sectors.
 block.omaloon-landing-capsule.name = Landing Capsule
+
+## techtree
+techtree.omaloon-glasmore = Glasmore
 
 ## ui
 fragment.omaloon.shaped-env-placer = Shaped Env Placer
