--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -3,6 +3,7 @@ ability.hailshield = Hail Shield
 ability.javelin = Javelin
 
 ## categories
+binding.category-omaloon-general = General
 binding.category-omaloon-editor = Editor
 category.omaloon-pressure = Pressure
 
