--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -22,7 +22,7 @@ block.omaloon-apex.description = A small gun.
 block.omaloon-blast.name = Blast
 block.omaloon-blast.description = An AoE weapon that stuns enemies.
 block.omaloon-convergence.name = Convergence
-block.omaloon-convergence.description = A small anti air turret.
+block.omaloon-convergence.description = A small anti-air turret.
 block.omaloon-javelin.name = Javelin
 block.omaloon-javelin.description = A long range cruise missile launcher.
 
@@ -190,12 +190,12 @@ sector.omaloon-crater-map.text7 = \
 objective.hail-warning = Massive hail storm approaching in [lightgray]{0}[]
 
 ## Sector
-sector.omaloon-The_Crater.name = The Crater
-sector.omaloon-The_Crater.description = A small crater hidden from the enemy by it's rough terrain and bad weather. A perfect place for a ground zero.
-sector.omaloon-Redeployment_Path.name = Redeployment Path
-sector.omaloon-Redeployment_Path.description = A aghanite desert with signs of heavy erosion. There is uneven terrain exposed due to this place's long aghanite storms. The enemy is present here, using small mechs and Lumens.
-sector.omaloon-Frozen_Valley.name = Frozen Valley
-sector.omaloon-Frozen_Valley.description = A peaceful valley containing a dead forest, this place is devoid of hail. Due to the high altitude, the enemy mainly uses flying units.
+sector.omaloon-crater.name = The Crater
+sector.omaloon-crater.description = The medium-sized equatorial crater left by one of the fragments of Set. A quiet and inconspicuous place, ideal for an initial landing. Explore the available resources and beware of dangerous weather caused by low temperatures.
+sector.omaloon-redeployment_path.name = Redeployment Path
+sector.omaloon-pedeployment_path.description = Very windy wasteland, away from craters and mountains. A regular redeployments of small enemy unit groups has been noticed here. Beware of strong dust storms and waves of enemies.
+sector.omaloon-dead_valley.name = Frozen Valley
+sector.omaloon-dead_valley.description = A peaceful valley containing a dead forest, this place is devoid of hail. Due to the high altitude, the enemy mainly uses flying units.
 
 ## settings
 settings.omaloon = Omaloon
