--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,6 @@ logs/
 /tests/build/
 /server/build/
 /test_files/
-/annotations/build/
 /desktop-sdl/build/
 desktop-sdl/build/
 /android/assets/mindustry-maps/
@@ -33,8 +32,7 @@ desktop-sdl/build/
 ios/robovm.properties
 packr-out/
 config/
-.cache
-.revisions
+/cache/
 *.gif
 
 version.properties
@@ -144,13 +142,6 @@ nb-configuration.xml
 /local.properties
 .gradle/
 gradle-app.setting
-/build/
-/android/build/
-/core/build/
-/desktop/build/
-/html/build/
-/ios/build/
-/ios-moe/build/
 
 ## OS Specific
 .DS_Store
@@ -158,3 +149,4 @@ Thumbs.db
 android/libs/
 /.run/*.run.xml
 modsDirectories.txt
+/revisions/
