turns out, it's hardcoded, so i added other stuff instead

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,6 +1,9 @@
 ## abilities
 ability.hailshield = Hail Shield
 ability.javelin = Javelin
+ability.omaloon-drone = Drone
+ability.omaloon-combat-drone = Combat Drone
+ability.omaloon-ultility-drone = Utility Drone
 
 ## categories
 binding.category-omaloon-general = General
@@ -33,7 +36,7 @@ block.omaloon-carborundum-wall-large.description = A large wall made out of Carb
 
 ## distribution
 block.omaloon-tube-bridge-conveyor.name = Tube Bridge
-block.omaloon-tube-bridge-conveyor.description = A tube convetor that can go through terrain.
+block.omaloon-tube-bridge-conveyor.description = A tube conveyor that can go through terrain.
 block.omaloon-tube-conveyor.name = Tube Conveyor
 block.omaloon-tube-conveyor.description = A conveyor within a tube to avoid weather.
 block.omaloon-tube-distributor.name = Tube Distributor
@@ -251,6 +254,8 @@ unit.omaloon-discovery.name = Discovery
 unit.omaloon-discovery.description = A small unit. Core unit of the Landing capsule.
 unit.omaloon-walker.name = Walker
 unit.omaloon-walker.description = The core unit of the Core Floe. Has a support and attack drone.
+unit.omaloon-combat-drone-alpha.name = Draug
+unit.omaloon-main-drone-mono.name = Phantom
 
 unit.omaloon-legionnaire.name = Leggionaire
 unit.omaloon-legionnaire.description = A small unit capable of shooting small bullets.
