--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -84,9 +84,11 @@ block.omaloon-albaster-wall.name = Albaster Wall
 block.omaloon-aghanite-dust.name = Aghanite Dust
 block.omaloon-aghanite-shale.name = Aghanite Shale
 block.omaloon-aghatite.name = Aghanite
-block.omaloon-aghatiteBoulder.name = Aghanite Boulder
+block.omaloon-aghatite-boulder.name = Aghanite Boulder
+block.omaloon-aghanite-concretion.name = Aghatite Concretion
+block.omaloon-large-aghanite-concretion.name = Large Aghatite Concretion
 block.omaloon-aghatite-pebbles.name = Aghanite Pebbles
-block.omaloon-aghanite-wall.name = Aghanite Wall
+block.omaloon-aghatite-wall.name = Aghanite Wall
 block.omaloon-berylled-aghanite.name = Berylled Aghanite
 block.omaloon-berylled-aghanite-boulder.name = Berylled Aghanite Boulder
 block.omaloon-coastal-aghanite.name = Coastal Aghanite
@@ -122,6 +124,8 @@ block.omaloon-fallen-dead-tree-bottom-half.name = Fallen Dead Tree Bottom Half
 block.omaloon-fallen-dead-tree-top-half.name = Fallen Dead Tree Top Half
 block.omaloon-standing-dead-tree.name = Standing Dead Tree
 block.omaloon-dead-tree-stump.name = Dead Stump
+block.omaloon-spiked-tree.name = Spiked Tree
+block.omaloon-bush-tree.name = Bush Tree
 
 ## Hints
 hint.omaloon-drill = Drills work faster the less pressure that they have. But be careful to not implode them.
