--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -201,8 +201,8 @@ sector.omaloon-crater.name = The Crater
 sector.omaloon-crater.description = The medium-sized equatorial crater left by one of the fragments of Set. A quiet and inconspicuous place, ideal for an initial landing. Explore the available resources and beware of dangerous weather caused by low temperatures.
 sector.omaloon-redeployment_path.name = Redeployment Path
 sector.omaloon-redeployment_path.description = Very windy wasteland, away from craters and mountains. A regular redeployments of small enemy unit groups has been noticed here. Beware of strong dust storms and waves of enemies.
-sector.omaloon-dead_valley.name = Frozen Valley
-sector.omaloon-dead_valley.description = A peaceful valley containing a dead forest, this place is devoid of hail. Due to the high altitude, the enemy mainly uses flying units.
+sector.omaloon-dead_valley.name = Dead Valley
+sector.omaloon-dead_valley.description = A quiet mountain valley without any dangerous weather features. The enemies, having noticed your presence earlier, have sent stronger and more dangerous groups to attack you. Explore the dead forest and its coal reserves to research new weapons to defend yourself against enemies.
 
 ## settings
 settings.omaloon = Omaloon
