--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -245,6 +245,11 @@ fragment.omaloon.cliff-placer = Cliff Placer
 place = Place
 ui.omaloon-process-cliffs = Process Cliffs
 ui.omaloon-un-process-cliffs = Reset Cliffs
+ui.omaloon-finished-campaign = \
+  [accent]Congratulations! You finished the 0.1A campaign![]\
+  \nInfo about the next release's development can be\
+  \nfound at our discord, so stay tuned for more stuff! :3
+ui.omaloon-exit-dialog = [gray]Click/tap to exit
 
 ## ui units
 unit.omaloon-pressuresecond = Pressure Units / Second
